# basic_shopify_api

./: .gitignore  MANIFEST.in  Makefile  pyproject.toml  requirements.txt  setup.py
basic_shopify_api/: __init__.py  __version__.py  config.py  constants.py  deferrer.py  models.py  options.py  store.py  types.py  utils.py
basic_shopify_api/clients/: __init__.py  async_client.py  client.py  common.py
basic_shopify_api/gql/: current_bulkoperation.gql  mutation_bulkoperation.gql  mutation_upload_bulkoperation.gql  query_bulkoperation.gql
docs/: index.md
tests/: conftest.py  test_client_common.py  test_client_graphql.py  test_client_limits.py  test_client_rest.py  test_options.py  test_utils.py  utils.py
tests/fixtures/: product.json
tests/fixtures/graphql/: throttle.json
