[tool.poetry]
name = "basic_shopify_api"
version = "1.0.1"
description = "A sync/async REST and GraphQL client for Shopify API using HTTPX"
license = "MIT"
authors = ["Ouiteo <support@ouiteo.com>", "Osiset <tyler@osiset.com>"]
maintainers = ["Ouiteo <support@ouiteo.com>"]
readme = "README.md"
homepage = "https://github.com/ouiteo/basic_shopify_api"
repository = "https://github.com/ouiteo/basic_shopify_api"
documentation = "https://basic-shopify-api.readthedocs.io"
keywords = ["shopify", "async", "httpx", "rest", "graphql", "client"]
classifiers = [
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "basic_shopify_api" }]
include = ["basic_shopify_api"]
exclude = ["tests", "docs"]

[tool.poetry.dependencies]
python = ">=3.8"
httpx = ">=0.13"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.poetry.dev-dependencies]
flake8-pyproject = "^1.2.3"
mypy = "^1.6.1"
ipdb = "^0.13.13"
black = "^23.10.1"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
tox = "^4.11.3"
coveralls = "^3.3.1"
mkdocs = "^1.5.3"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ouiteo/basic_shopify_api/issues"
"All Releases" = "https://github.com/ouiteo/basic_shopify_api/releases"
"Latest Release" = "https://github.com/ouiteo/basic_shopify_api/releases/latest"
"Source" = "https://github.com/ouiteo/basic_shopify_api"

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb -p no:warnings --junitxml=.reports/coverage.xml --cov-report=html:.reports/htmlcov --cov basic_shopify_api"
junit_family = "xunit2"
norecursedirs = ".git .tox _resource .mypy_cache build dist docs"

[tool.flake8]
max-complexity = 10
ignore = ["C901", "W504", "W503", "E231", "E203"]
exclude = [".git", ".tox", "_resource", "build", "dist", "docs"]
max-line-length = 120
show-source = true
statistics = false

[tool.coverage.run]
omit = ["*/__init__.py", ".tox", ".mypy_cache", ".reports", ".git"]

[tool.coverage.report]
omit = ["*/__init__.py", ".tox", ".mypy_cache", ".reports", ".git"]
show_missing = true

[tool.tox]
legacy_tox_ini = """

[tox]
envlist =
    python3.8
    python3.9
    python3.10
    python3.11
    coveralls-python3.11,
skipsdist = True

[gh-actions]
python =
    3.8: python3.8
    3.9: python3.9
    3.10: python3.10
    3.11: python3.11

[testenv]
setenv =
    PYTHONPATH = {toxinidir}
commands =
    {envpython} -m flake8 basic_shopify_api --max-line-length 120
    {envpython} -m pytest
deps =
    flake8-pyproject
    pytest
    pytest-cov
    coveralls
    mypy
    black
    httpx

[testenv:coveralls-python3.11]
passenv = COVERALLS_REPO_TOKEN
commands =
    - mypy basic_shopify_api --ignore-missing-imports
    black --check basic_shopify_api tests --target-version py311 --line-length 120
    pytest
    - coveralls
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
