[tool.poetry]
name = "basic_shopify_api"
version = "1.0.1"
description = "A sync/async REST and GraphQL client for Shopify API using HTTPX"
license = "MIT"
authors = ["Ouiteo <support@ouiteo.com>", "Osiset <tyler@osiset.com>"]
maintainers = ["Ouiteo <support@ouiteo.com>"]
readme = "README.md"
homepage = "https://github.com/ouiteo/basic_shopify_api"
repository = "https://github.com/ouiteo/basic_shopify_api"
documentation = "https://basic-shopify-api.readthedocs.io"
keywords = ["shopify", "async", "httpx", "rest", "graphql", "client"]
classifiers = [
    "Environment :: Web Environment",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "basic_shopify_api" }]
include = ["basic_shopify_api"]
exclude = ["tests", "docs"]

[tool.poetry.dependencies]
python = ">=3.9"
httpx = ">=0.13"

[tool.poetry.group.dev.dependencies]
pytest-httpx = "^0.26.0"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.poetry.dev-dependencies]
mypy = "^1.6.1"
ipdb = "^0.13.13"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
tox = "^4.11.3"
coveralls = "^3.3.1"
mkdocs = "^1.5.3"
ruff = "*"                      # linter and code formatter

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ouiteo/basic_shopify_api/issues"
"All Releases" = "https://github.com/ouiteo/basic_shopify_api/releases"
"Latest Release" = "https://github.com/ouiteo/basic_shopify_api/releases/latest"
"Source" = "https://github.com/ouiteo/basic_shopify_api"

[tool.pytest.ini_options]
addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb -p no:warnings --junitxml=.reports/coverage.xml --cov-report=html:.reports/htmlcov --cov basic_shopify_api"
junit_family = "xunit2"
norecursedirs = ".git .tox _resource .mypy_cache build dist docs"

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = [
    "E",    # PEP8 errors
    "W",    # PEP8 warnings
    "F",    # PyFlakes
    "I",    # isort
    "C",    # mccabe
    "T201", # flake8-print
]

[tool.ruff.lint.isort]
known-first-party = ["basic_shopify_api"]
known-local-folder = ["tests"]

[tool.ruff.lint.mccabe]
max-complexity = 11

[tool.reports.run]
omit = ["*/__init__.py", ".tox", ".mypy_cache", ".reports", ".git"]

[tool.reports.report]
omit = ["*/__init__.py", ".tox", ".mypy_cache", ".reports", ".git"]
show_missing = true

[tool.tox]
legacy_tox_ini = """

[tox]
envlist =
    python3.8
    python3.9
    python3.10
    python3.11
    python3.12
    coveralls-python3.12,
skipsdist = True

[gh-actions]
python =
    3.8: python3.8
    3.9: python3.9
    3.10: python3.10
    3.11: python3.11
    3.12: python3.12

[testenv]
setenv =
    PYTHONPATH = {toxinidir}
commands =
    {envpython} -m ruff format --check basic_shopify_api tests
    {envpython} -m ruff check basic_shopify_api tests
    {envpython} -m pytest

deps =
    flake8-pyproject
    pytest
    pytest-cov
    coveralls
    mypy
    ruff
    httpx

[testenv:coveralls-python3.12]
passenv = COVERALLS_REPO_TOKEN
commands =
    - mypy basic_shopify_api --ignore-missing-imports
    black --check basic_shopify_api tests --target-version py312 --line-length 120
    pytest
    - coveralls
"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
